app/assets/stylesheets/application.scss
/* ... */
.footnote_ref {
  vertical-align: super;
  font-size: 75%;
}
.footnote_num {
  vertical-align: super;
  font-size: 75%;
}
.BYD-entry-top {
  flex-wrap: wrap;
}
.source {
  font-weight: bolder;
  /* vertical-align: sub; */
  font-size: 70%;
}
.comment {
  color:   #64150f;
}

.red {
  color: red;
}
.redbg {
  background-color: red !important;
}
.lredbg {
  background-color: lightcoral !important;
}
.green {
  color: green;
}
.greenbg {
  background-color: green !important;
}
.lgreenbg {
  background-color: lightgreen !important;
}
.yellowbg {
  background-color: yellow !important;
}
/* end dict_top workarounds */
.navdisabled {
  color: #d9cdd5;
  cursor: default;
}
.sort-type .vertical-expand::before {
  content: "]";
}
.collapsed.vertical-expand::before {
  content: "<";
}
#anth_texts .collapsed.vertical-expand::before {
  content: "<";
}
#anth_texts .vertical-expand::before {
  content: "]";
}
.advanced-pagination {
  width: calc(100% - 150px);
}

.dashboard-link {
  /*  position:absolute; display:inline; top:11rem; left: 10rem;*/
    line-height: unset;
    float:left;
    margin-top: -1rem;
  }

/* pagination links */
.page {
  padding: 3px;
}
.next { padding: 3px;}
.last { padding: 3px;}
.prev { padding: 3px;}
.first { padding: 3px;}

.dropdown-menu {
  font-size: initial; /* override Bootstrap's default */
}
body {
  overflow-x: hidden; /* prevent horizontal scrollbar (caused by Slick's carousel track having a virtual width of 50000) */
}

.scrolled .top-element {
  margin-top: 93px;
}

header {overflow-x: hidden;} /* prevent horizontal scrollbar (caused by Slick's carousel track having a virtual width of 50000) */
.share {cursor: pointer;}
.pointer {cursor: pointer;}
.linkcolor{color: #660248;}
.linkcolor.active {color: #fff;}
.linkcolor:hover{  color: #2b0d22;}
.white {color:white;}
.current-menu-item a{
	color: #ffffff;
	background-color: #660248;
}
.error-found-row{
  height: 1px;
}
#add-rec-form{
  display:none;
}
.error-found-col{
  height: min-content;
  width:min-content;
}
.modal-content{
  background-color: transparent;
}
#header-general{
  z-index: 2000;
}
.by-dropdown-content-v02 p {
  padding: 6px 15px;
  margin: 0;
  display: block;
  color: #660248; }

.by-dropdown-content-v02 p:hover {
  background-color: #eeeced;
  color: #2b0d22; }

#moreMobile {
  cursor: pointer;
}
.work-chapters-dropdown-field-desktop {
  cursor: pointer;
}
.modal-dialog{max-width: unset;}
.modal-content { border: 0;}
.modal-header{border:0;}
.modal-footer{border:0;}

.a-b-pagination-frame .in-range-disabled{
  background-color: #d9cdd5;
	color: white;
}

.dropdown-toggle{
  -webkit-appearance: none;
}
.dropdown .dropdown-toggle::after{
  display:none;
}
.g_anch { /* for anchors that can be jumped to despite the fixed top bar */
  /*
  position:absolute;
  top:-200px;
  */
  height: 2px;
}
#chapternav{ width: min-content;}
#chapter-nav{
  max-height: 400px;
  overflow-y: auto;
}
.side-nav-col { pointer-events: none;}
.side-nav-col nav { pointer-events: auto;}
@media screen and (max-width: 767px) {
  .popup-top { position:static; }
  .by-popup-v02 { position: static; }
  .modal-dialog {height: 100%;}
  .modal-content {height: 100%;}
  #chapter-nav{
    max-height: 300px;
  }
  #static_page img {
    width: 100%;
    object-fit: cover;
  }

}
@media screen and (max-width: 991px) {
  #moreMobile .dropdown-menu{ transform: translate3d(5px, 42px, 0px) !important;}
  #moreMobile-author .dropdown-menu{ transform: translate3d(5px, 72px, 0px) !important;}
}
@media screen and (max-width: 399px) {
  #moreMobile .dropdown-menu{ transform: translate3d(5px, 28px, 0px) !important;}
  #moreMobile-author .dropdown-menu{ transform: translate3d(5px, 28px, 0px) !important;}
  #static_page img {
    width: 100%;
    object-fit: cover;
  }
}
/* .top-search-v02 input { width: auto;}*/
.ch_anch { height: 2px;}
.tooltip{ pointer-events:none; }
.by-dropdown-header-v02 { cursor: default;}
.search_results { font-size: 13pt; line-height: 1.2rem; }
.search_results li { margin-top: 0.8rem;}
.progress-outside .progress-inside{
  width:0%;
}
.progress-outside{
	width: calc(100% - 35px);
}

.backend input {
  border: solid 1px;
  width: unset;
}

.striped {
  background-image: linear-gradient(135deg, #dbb59b 25%, #5F5370 25%, #5F5370 50%, #dbb59b 50%, #dbb59b 75%, #5F5370 75%, #5F5370 100%);
  background-size: 56.57px 56.57px;
}
/* temporary fix for dropping below the carousel in Chrome
.carousel-arrow-left-v02{
  width: unset;
}
*/

.backend #genre{
  min-height: unset;
  height: unset;
}

/* stuff for jQuery sortable */
body.dragging, body.dragging * {
  cursor: move !important;
}
.dragged {
  position: absolute;
  left: 0px;
  opacity: 0.5;
  z-index: 2000;
}
/*
ol#anth_texts li.placeholder {
  position: relative;
  margin: 0;
  padding: 0;
  border: none;
}
ol#anth_texts li.placeholder:before {
  position: absolute;
  content: "";
  width: 0;
  height: 0;
  margin-top: -5px;
  left: -5px;
  top: -4px;
  border: 5px solid transparent;
  border-right-color: red;
  border-left: none;
}*/
.nav-link.active{
	color: #ffffff;
	background-color: #660248;
}
.nav-link{
  align-items: normal;
}
/*.custom-select{
  display:none;
}*/
/** .slider-handle {
  background-color: #907989;
  background-image: unset;
} */
/* .slider-selection {
	background: #907989;
}*/

.languages-filters{
	padding-right: 24px;
}
/* remove all default styling of buttons */
button.plainbutton {
  display: inline-block;
  border: none;
  text-decoration: none;
  cursor: pointer;
  text-align: center;
  -webkit-appearance: none;
  -moz-appearance: none;
}

button.chapterbutton {
  font-family: 'ben-yehuda';
  width: 100%;
  background-color: inherit;
}
input[type="search"]::-webkit-search-cancel-button {
  margin-left: 30px;
}

.bookmark::before{
content: unset;
}
.bookmark_marker{
	font-family: ben-yehuda;
	font-size: 18px; 
	line-height: 18px;
	float: left;
	position: relative;
  left: -26px;
  cursor: pointer;
}
/* ... */

